# _ComfyUI_CharacterPose

./: .comfyignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  utils.py
formats/: __init__.py  char_io.py  pose_io.py
nodes/: __init__.py  caption.py  character.py  composer.py  pose.py  render.py  sheet.py  warp.py
pose3d/: __init__.py  camera.py  from_prompt.py  presets.py  project.py  props.py  skeleton.py
poses/: _generate_poses.py  attack.pose  death.pose  fight_ne_01.pose  fight_ne_02.pose  fight_se_01.pose  fight_se_02.pose  hurt.pose  idle.pose  idle_ne.pose  idle_se.pose  idle_side.pose  jump.pose  jump_ne.pose  jump_se.pose  run_01.pose  run_02.pose  run_03.pose  run_04.pose  run_ne_01.pose  run_ne_02.pose  run_ne_03.pose  run_ne_04.pose  run_se_01.pose  run_se_02.pose  run_se_03.pose  run_se_04.pose  walk_01.pose  walk_02.pose  walk_03.pose  walk_04.pose  walk_ne_01.pose  walk_ne_02.pose  walk_ne_03.pose  walk_ne_04.pose  walk_se_01.pose  walk_se_02.pose  walk_se_03.pose  walk_se_04.pose  walk_side_01.pose  (+7 more)
tests/: diag_warp_melt.py  smoke_test.py
workflows/: _build_workflows.py  character_pose_nodes.json  poc_pose_transfer.json  pose_transfer_flux_klein.json  pose_transfer_qwen_controlnet.json  pose_transfer_warp.json
